Remove generic stuff and no more devcontainer

--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "phaser3-project-template",
-  "version": "2.0.0",
-  "description": "A Phaser 3 Project Template",
+  "name": "gmtk-game-jam-2025",
+  "version": "1.0.0",
+  "description": "A game",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack/prod.js ",
-    "start": "pkill webpack; webpack-dev-server --config webpack/base.js --open"
+    "start": "webpack-dev-server --config webpack/base.js --open"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/photonstorm/phaser3-project-template.git"
+    "url": "git+https://github.com/photonstorm/gmtk-game-jam-2025.git"
   },
   "author": "Richard Davey <rdavey@gmail.com> (http://www.photonstorm.com)",
   "license": "MIT",
   "licenseUrl": "http://www.opensource.org/licenses/mit-license.php",
   "bugs": {
-    "url": "https://github.com/photonstorm/phaser3-project-template/issues"
+    "url": "https://github.com/photonstorm/gmtk-game-jam-2025/issues"
   },
-  "homepage": "https://github.com/photonstorm/phaser3-project-template#readme",
+  "homepage": "https://github.com/photonstorm/gmtk-game-jam-2025#readme",
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
