--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
+    "webpack-dev-server": "^5.2.2",
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
-    "phaser": "3.70",
+    "phaser": "^3.90.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.2"
   }
 }
