Add Prettier config file and reformat

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,7 @@ trim_trailing_whitespace = true
 [*.{ts,tsx}]
 indent_style = space
 indent_size = 2
+
+[*.{js,jsx,json,html,css}]
+indent_style = space
+indent_size = 2
