--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: "github-pages-${{ github.ref }}"
+  cancel-in-progress: false
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
